--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,12 @@
-// backend/vercel.json
 {
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js", // Ensure this is the correct path to your Express app export
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "rewrites": [
-    // This is the most common and effective rewrite for a full Express app
-    // It means any request to your backend domain will be handled by api/index.js
     { "source": "/(.*)", "destination": "/api/index" }
   ]
 }
